feat:add blocks structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header id="_header">
+        <div class="container-fluid">
+
+        </div>
+
+    </header>
+
+    <main id="main_content" class="d-flex">
+        <nav id="side_bar">
+            <div class="container-fluid">
+
+            </div>
+        </nav>
+
+        <div id="top_content"  class="container-fluid">
+
+        </div>
+    </main>
       
 
 
