feat:add side-bar

--- a/index.html
+++ b/index.html
@@ -10,18 +10,52 @@
 </head>
 <body>
     <header id="_header">
-        <div class="container-fluid">
+        <nav class="container-fluid">
 
-        </div>
+        </nav>
 
     </header>
 
     <main id="main_content" class="d-flex">
-        <nav id="side_bar">
-            <div class="container-fluid">
+        <aside id="side_bar" class="side_bar">
+            <div class="container-fluid h-100 d-flex flex-column">
+                <div class="d-flex flex-column align-items-center gap-3 mt-5">
+                    <i class="fa-solid fa-house fs-4"></i>
+                    <i class="fa-solid fa-chart-simple fs-4"></i>
+                    <i class="fa-solid fa-signal fs-4"></i>
 
+                </div>
+                <div class="d-flex justify-content-center mt-auto mb-5">
+                    <i class="fa-solid fa-gear fs-4"></i>
+                </div>
             </div>
-        </nav>
+        </aside>
+
+        <aside id="side_bar" class="side_bar_lg">
+            <div class="container-fluid h-100 d-flex flex-column">
+                <div class="d-flex flex-column align-items-start gap-4 mt-4">
+                    <div class="d-flex align-items-center gap-3">
+                        <i class="fa-solid fa-house fs-5"></i>
+                        <span class="fw-bold fs-6">Home</span>
+                    </div>
+                    <div class="d-flex align-items-center gap-3">
+                        <i class="fa-solid fa-chart-simple fs-4"></i>
+                        <span class="fw-bold fs-6">Stats</span>
+                    </div>
+                    <div class="d-flex align-items-center gap-3">
+                        <i class="fa-solid fa-signal fs-5"></i>
+                        <span class="fw-bold fs-6">Signals</span>
+                    </div>
+
+                </div>
+                <div class="d-flex justify-content-start mt-auto mb-4">
+                    <div class="d-flex align-items-center gap-3">
+                        <i class="fa-solid fa-gear fs-5"></i>
+                        <span class="fw-bold fs-6">Admin</span>
+                    </div>
+                </div>
+            </div>
+        </aside>
 
         <div id="top_content"  class="container-fluid">
 
