--- a/index.html
+++ b/index.html
@@ -10,10 +10,57 @@
 </head>
 <body>
     <header id="_header">
-        <nav class="container-fluid">
-
-        </nav>
-
+        <div class="container-fluid h-100">
+            <nav class="navbar navbar-expand-lg bg-light h-100">
+                <a class="navbar-brand d-lg-none" href="#">
+                    <img class="only_logo" src="./img/mobile-logo.png" alt="">
+                </a>
+                <a class="navbar-brand d-none d-lg-block" href="#">
+                    <img class="" src="./img/logo.svg" alt="">
+                </a>
+                <form class="d-flex flex-grow-1 d-lg-none" role="search">
+                    <div class="input-group">
+                        <span class="input-group-text border-0" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                        <input type="text" class="form-control bg_color border-0 px-0" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                </form>
+                <button class="navbar-toggler border-0 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                   <i class="fa-solid fa-bell"></i>
+                </button>
+                <div class="collapse navbar-collapse bg-light rounded-2" id="navbarSupportedContent">
+                    <form class="d-flex flex-grow-1 d-none d-lg-block" role="search">
+                        <div class="input-group">
+                            <span class="input-group-text border-0" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                            <input type="text" class="form-control bg_color border-0 px-0" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                    </form>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
+                        <li class="nav-item">
+                            <a class="dropdown-item d-lg-none fs-6" href="#"><i class="fa-solid fa-user fs-6"></i> Profilo</a>
+                            <a class="nav-link d-none d-lg-block" aria-current="page" href="#"><i class="fa-solid fa-list-ul"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="dropdown-item d-lg-none fs-6" href="#"><i class="fa-solid fa-file-invoice fs-6"></i> Fatturazione</a>
+                            <a class="nav-link d-none d-lg-block" href="#"><i class="fa-solid fa-circle-question"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="dropdown-item d-lg-none fs-6" href="#"><i class="fa-solid fa-right-from-bracket fs-6"></i> Logout</a>
+                            <a class="nav-link d-none d-lg-block" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        </li>
+                        <li class="nav-item dropdown d-none d-lg-block">
+                            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-bell"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="#">Profilo</a></li>
+                                <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <main id="main_content" class="d-flex">
