--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </div>
             </div>
 
-            <div class="container-fluid">
-
+            <div class="container-fluid mt-4">
+                
             </div>
         </div>
     </main>
@@ -164,15 +164,72 @@
     <!-- OFFCANVAS -->
     <div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="staticBackdropLabel">Offcanvas</h5>
+          <h6 class="offcanvas-title" id="staticBackdropLabel">Inserisci un nuovo studente</h6>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-          <div>
-            I will not close if you click outside of me.
+          <div class="container-fluid">
+              <form action="http://learning.tizianonicolai.com/request-catcher/" method="post" target="_blank">
+                  <div class="row gy-2">
+                      <div class="col-6">
+                          <label for="name" class="form-label">Nome</label>
+                          <input type="text" class="form-control" name="name" id="name" required>
+                      </div>
+                      <div class="col-6">
+                          <label for="surname" class="form-label">Cognome</label>
+                          <input type="text" class="form-control" name="surname" id="surname" required>
+                      </div>
+                      <div class="col-6">
+                          <label for="email" class="form-label">Email</label>
+                          <div class="input-group mb-3">
+                              <span class="input-group-text" id="basic-addon1">@</span>
+                              <input type="text" class="form-control" name="email" id="email" aria-label="email" aria-describedby="basic-addon1" required>
+                          </div>
+                      </div>
+                      <div class="col-6">
+                          <label for="pwd" class="form-label">Password</label>
+                          <input type="password" class="form-control" name="pwd" id="pwd" required>
+                      </div>
+                      <div class="col-12">
+                          <label for="address" class="form-label">Indirizzo</label>
+                          <input type="text" class="form-control" name="address" id="address" required>
+                      </div>
+                      <div class="col-6">
+                          <label for="city" class="form-label">Città</label>
+                          <input type="text" class="form-control" name="city" id="city" required>
+                      </div>
+                      <div class="col-4">
+                          <label for="state" class="form-label">Stato</label>
+                              <select class="form-control" name="state" id="state">
+                              <option value="">Scegli...</option>
+                              <option value="italia">Italia</option>
+                              <option value="francia">Francia</option>
+                              <option value="spagna">Spagna</option>
+                              <option value="germania">Germania</option>
+                          </select>
+                      </div>
+                      <div class="col-2">
+                          <label for="cap" class="form-label">Cap</label>
+                          <input type="text" class="form-control" name="cap" id="cap" required>
+                      </div>
+                      <div class="col-12">
+                          <label for="photo" class="form-label">Foto</label>
+                          <div class="input-group mb-3">
+                              <button class="btn btn-outline-secondary text_xsmall" type="button" id="button-addon1">Scegli file</button>
+                              <input type="text" class="form-control" placeholder="Nessun file selezionato" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                          </div>
+                      </div>
+                      <div class="col-12 d-flex align-items-center">
+                          <input type="checkbox" name="selection" id="selection" required>
+                          <label for="selection" class="text_small ms-1">Seleziona per proseguire</label>
+                      </div> 
+                      <button class="ms-2 mt-3 col-1 text_small btn btn-success border-0">Salva</button>
+                      <input class="ms-2 mt-3 col-1 text_small btn btn-warning border-0" type="reset" value="Svuota">
+                  </div>   
+              </form>   
           </div>
         </div>
-      </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
