feat:add table main content

--- a/index.html
+++ b/index.html
@@ -135,7 +135,185 @@
             </div>
 
             <div class="container-fluid mt-4">
-                
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header fw-bold">Prossime classi</div>
+                            <table class="table mt-3">
+                              <thead>
+                                <tr>
+                                  <th scope="col">Nome</th>
+                                  <th scope="col">Stato</th>
+                                  <th scope="col">Azioni</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td>
+                                    <div class="class_avatar">
+                                        <img src="./img/class-avatar.jpg" alt="">
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <span class="text_small fw-bold">Classe</span>
+                                        <span class="text_small fw-bold">75</span>
+                                    </div>
+                                  </td>
+                                  <td><span class="text_xsmall badge text-bg-success">Done</span></td>
+                                  <td>
+                                      <span class="border ps-2 py-1 me-2 text-secondary">
+                                          <i class="fa-solid fa-pencil"></i>
+                                      </span>
+                                      <span class="border px-2 py-1 text-secondary">
+                                          <i class="fa-solid fa-trash"></i>
+                                      </span>
+                                  </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">76</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-success">Done</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">77</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-warning text-light">Process</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">78</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-success">Done</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">79</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-danger">Failed</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">80</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-success">Done</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">81</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-danger">Failed</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="class_avatar">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <span class="text_small fw-bold">Classe</span>
+                                            <span class="text_small fw-bold">82</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="text_xsmall badge text-bg-success">Done</span></td>
+                                    <td>
+                                        <span class="border ps-2 py-1 me-2 text-secondary">
+                                            <i class="fa-solid fa-pencil"></i>
+                                        </span>
+                                        <span class="border px-2 py-1 text-secondary">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </span>
+                                    </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col"></div>
+                </div>
             </div>
         </div>
     </main>
