feat:accordion faq

--- a/index.html
+++ b/index.html
@@ -135,29 +135,31 @@
             </div>
 
             <div class="container-fluid mt-4">
-                <div class="row">
-                    <div class="col-12">
+                <div class="row g-3">
+                    <div class="col-12 col-md-8">
                         <div class="card">
                             <div class="card-header fw-bold">Prossime classi</div>
-                            <table class="table mt-3">
+                            <table class="table text-center mt-3">
                               <thead>
                                 <tr>
-                                  <th scope="col">Nome</th>
+                                  <th class="col_large" scope="col">Nome</th>
+                                  <th class="d-none d-md-table-cell col_medium" scope="col">Data di inizio</th>
+                                  <th class="d-none d-md-table-cell" scope="col">ROI</th>
                                   <th scope="col">Stato</th>
-                                  <th scope="col">Azioni</th>
+                                  <th class="col_medium" scope="col">Azioni</th>
                                 </tr>
                               </thead>
                               <tbody>
                                 <tr>
                                   <td>
-                                    <div class="class_avatar">
-                                        <img src="./img/class-avatar.jpg" alt="">
-                                    </div>
-                                    <div class="d-flex flex-column">
-                                        <span class="text_small fw-bold">Classe</span>
+                                    <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                        <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                        <span class="text_small fw-bold me-1">Classe</span>
                                         <span class="text_small fw-bold">75</span>
                                     </div>
                                   </td>
+                                  <td class="d-none d-md-table-cell"><span>15 Feb 2021</span></td>
+                                  <td class="d-none d-md-table-cell"><span>20%</span></td>
                                   <td><span class="text_xsmall badge text-bg-success">Done</span></td>
                                   <td>
                                       <span class="border ps-2 py-1 me-2 text-secondary">
@@ -170,14 +172,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">76</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>16 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-success">Done</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -190,14 +192,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">77</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>17 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-warning text-light">Process</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -210,14 +212,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">78</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>18 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-success">Done</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -230,14 +232,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">79</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>19 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-danger">Failed</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -250,14 +252,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">80</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>20 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-success">Done</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -270,14 +272,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">81</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>21 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-danger">Failed</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -290,14 +292,14 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="class_avatar">
-                                            <img src="./img/class-avatar.jpg" alt="">
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <span class="text_small fw-bold">Classe</span>
+                                        <div class="class_avatar d-flex flex-column align-items-start flex-sm-row align-items-sm-center">
+                                            <img  class="me-2" src="./img/class-avatar.jpg" alt="">                  
+                                            <span class="text_small fw-bold me-1">Classe</span>
                                             <span class="text_small fw-bold">82</span>
                                         </div>
                                     </td>
+                                    <td class="d-none d-md-table-cell"><span>22 Feb 2021</span></td>
+                                    <td class="d-none d-md-table-cell"><span>20%</span></td>
                                     <td><span class="text_xsmall badge text-bg-success">Done</span></td>
                                     <td>
                                         <span class="border ps-2 py-1 me-2 text-secondary">
@@ -311,8 +313,49 @@
                               </tbody>
                             </table>
                         </div>
+                        <div class="card mt-3">
+                            <div class="card-header">
+                              F.A.Q
+                            </div>
+                            <div class="accordion accordion-flush" id="accordionfaq">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                      Come aggiungere un nuovo studente
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionfaq">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                      Come posso accedere alle informazione del mio account
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionfaq">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                      Posso usare questa dashboard da mobile
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionfaq">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
                     </div>
-                    <div class="col"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        
+                    </div>
                 </div>
             </div>
         </div>
