--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                             <div class="accordion accordion-flush" id="accordionfaq">
                                 <div class="accordion-item">
                                   <h2 class="accordion-header" id="flush-headingOne">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                    <button class="text_accordion fw-bold accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                       Come aggiungere un nuovo studente
                                     </button>
                                   </h2>
@@ -330,7 +330,7 @@
                                 </div>
                                 <div class="accordion-item">
                                   <h2 class="accordion-header" id="flush-headingTwo">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                    <button class="text_accordion fw-bold accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                                       Come posso accedere alle informazione del mio account
                                     </button>
                                   </h2>
@@ -340,7 +340,7 @@
                                 </div>
                                 <div class="accordion-item">
                                   <h2 class="accordion-header" id="flush-headingThree">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                    <button class="text_accordion fw-bold accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                                       Posso usare questa dashboard da mobile
                                     </button>
                                   </h2>
@@ -356,15 +356,15 @@
                             <div class="card-header">
                                 Todo
                             </div>
-                            <div class="d-flex align-items-center my-2 ps-2 border-bottom">
+                            <div class="d-flex align-items-center mt-2 ps-2 pb-1 border-bottom">
                                 <input type="checkbox" name="todo-selection" id="todo-selection" required>
                                 <label for="todo-selection" class="text_small ms-1">Kickoff nuove classi</label>
                             </div>
-                            <div class="d-flex align-items-center my-2 ps-2 border-bottom">
+                            <div class="d-flex align-items-center mt-2 ps-2 pb-1 border-bottom">
                                 <input type="checkbox" name="todo-selection2" id="todo-selection2" required>
                                 <label for="todo-selection2" class="text_small ms-1">Lezione su Boostrap 5 in classe #75</label>
                             </div>
-                            <div class="d-flex align-items-center my-2 ps-2 border-bottom">
+                            <div class="d-flex align-items-center mt-2 ps-2 pb-1 border-bottom">
                                 <input type="checkbox" name="todo-selection3" id="todo-selection3" required>
                                 <label for="todo-selection3" class="text_small ms-1">Controllare username github studenti</label>
                             </div>
@@ -372,9 +372,12 @@
                         <div class="card mt-3">
                             <img src="./img/stats.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Utenti Attivi</h5>
+                              <h5 class="card-title fs-6">Utenti Attivi</h5>
                               <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <p class="card-text border-bottom">Gennaio: 1200</p>
+                              <p class="card-text border-bottom">Febbraio: 800</p>
+                              <p class="card-text border-bottom">Marzo: 1500</p>
+                              <a class="text_small" href="#">Visualizza report approfondito</a>
                             </div>
                         </div>
                     </div>     
