--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             </div>
                         </div>
                         <div class="card mt-3">
-                            <img src="./img/stats.jpeg" class="card-img-top" alt="...">
+                            <img class="border-bottom" src="./img/stats.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title fs-6">Utenti Attivi</h5>
                               <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
