--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             <div class="container-fluid h-100 d-flex flex-column">
                 <!-- ICONE TOP SIDEBAR -->
                 <div class="d-flex flex-column align-items-center gap-3 mt-4">
-                    <i class="fa-solid fa-house fs-4"></i>
-                    <i class="fa-solid fa-chart-simple fs-4"></i>
-                    <i class="fa-solid fa-signal fs-4"></i>
+                    <a class="text-light" href="#"><i class="fa-solid fa-house fs-4"></i></a>
+                    <a class="text-light" href="#"><i class="fa-solid fa-chart-simple fs-4"></i></a>
+                    <a class="text-light" href="#"><i class="fa-solid fa-signal fs-4"></i></a>
                 </div>
                 <!-- ICONA BOTTOM SIDEBAR -->
                 <div class="d-flex justify-content-center mt-auto mb-5">
-                    <i class="fa-solid fa-gear fs-4"></i>
+                    <a class="text-light" href="#"><i class="fa-solid fa-gear fs-4"></i></a>
                 </div>
             </div>
         </aside>
@@ -104,26 +104,22 @@
                 <div class="d-flex flex-column align-items-start gap-4 mt-4">
                     <!-- ICONA HOME -->
                     <div class="d-flex align-items-center gap-3">
-                        <i class="fa-solid fa-house fs-5"></i>
-                        <span class="fw-bold fs-6">Home</span>
+                        <a class="text-light text-decoration-none" href="#"><i class="fa-solid fa-house fs-5"></i><span class="ms-3 fw-bold fs-6">Home</span></a>
                     </div>
+                    <!-- ICONA STATS -->
                     <div class="d-flex align-items-center gap-3">
-                        <!-- ICONA STATS -->
-                        <i class="fa-solid fa-chart-simple fs-4"></i>
-                        <span class="fw-bold fs-6">Stats</span>
+                        <a class="text-light text-decoration-none" href="#"><i class="fa-solid fa-chart-simple fs-4"></i><span class="ms-3 fw-bold fs-6">Stats</span></a>
                     </div>
+                    <!-- ICONA SIGNALS -->
                     <div class="d-flex align-items-center gap-3">
-                        <!-- ICONA SIGNALS -->
-                        <i class="fa-solid fa-signal fs-5"></i>
-                        <span class="fw-bold fs-6">Signals</span>
+                        <a class="text-light text-decoration-none" href="#"><i class="fa-solid fa-signal fs-5"></i><span class="ms-3 fw-bold fs-6">Signals</span></a>
                     </div>
 
                 </div>
+                <!-- ICONA ADMIN -->
                 <div class="d-flex justify-content-start mt-auto mb-4">
-                    <!-- ICONA ADMIN -->
                     <div class="d-flex align-items-center gap-3">
-                        <i class="fa-solid fa-gear fs-5"></i>
-                        <span class="fw-bold fs-6">Admin</span>
+                        <a class="text-light text-decoration-none" href="#"><i class="fa-solid fa-gear fs-5"></i><span class="ms-3 fw-bold fs-6">Admin</span></a>
                     </div>
                 </div>
             </div>
