--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="container-fluid mt-4">
                 <div class="row g-3">
                     <!-- PRIMA COL -->
-                    <div class="col-12 col-lg-8 mb-5">
+                    <div class="col-12 col-lg-8 mb-lg-5">
                         <!-- CARD TABLE -->
                         <div class="card">
                             <div class="card-header fw-bold">Prossime classi</div>
@@ -382,7 +382,7 @@
                         </div>
                     </div>
                     <!-- SECONDA COL -->
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-lg-4 mb-5">
                         <!-- CARD TODO -->
                         <div class="card">
                             <div class="card-header">
